--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -1,7 +1,7 @@
 .section {
   position: relative;
   width: 100vw;
-  height: calc(100vh - 70px);
+  height: calc(100vh - 120px);
   overflow: hidden;
   width: 100vw;
   top: 30px;
